# cytest

./: .gitignore  Documentation.md  GEMINI.md  LICENSE.txt  README.md  __init__.py  printpdf.py  publish-test.sh  publish.sh  pyproject.toml  run.sh
cases/: __st__.py  功能1.py
cases/end2end/: API_REFERENCE.md  MALL_DEPLOY_AND_INTEGRATION.md  TEST_PLAN_ECOMMERCE.md  __st__.py
cases/end2end/00_docs/: END2END_TEST_CASES.csv  END2END_TEST_CASES.txt  ENV_SETUP.md  __st__.py
cases/end2end/01_smoke/: __st__.py
cases/end2end/02_contract/: __st__.py
cases/end2end/03_shared/: __st__.py
cases/end2end/10_auth/: __st__.py  auth_cases.py
cases/end2end/20_catalog/: __st__.py  catalog_cases.py
cases/end2end/21_search/: __st__.py  search_cases.py
cases/end2end/22_product/: __st__.py  product_cases.py
cases/end2end/30_checkout/: __st__.py  checkout_cases.py
cases/end2end/31_pricing/: __st__.py  pricing_cases.py
cases/end2end/32_inventory/: __st__.py  inventory_cases.py
cases/end2end/34_full_purchase/: __st__.py  (+1 more)
cases/open_api_basic/: OPEN.md  __st__.py  api_cases.py  rest_routes_cases.py
cases/order/: 功能31.py
cases/web_auto/: __st__.py  requests_api.py  selenium_ui.py
cytest/: __init__.py  __main__.py  cfg.py  common.py  run.py
cytest/utils/: cytest.md  log.py  report.css  report.js  runner.py  signal.py  template_vue.html
lib/: gql_diagnose.py  saleor_api.py  saleor_flow_helpers.py  share.py  web_ui.py
tests_pytest/: conftest.py  test_auth_saleor.py  test_checkout_saleor.py
tests_pytest_open_api/: conftest.py  test_jsonplaceholder_api_cases.py
(+19 files in other folders)
